--- a/02-pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
+++ b/02-pokemon-ssr/src/app/pages/pokemons/pokemons-page.component.html
@@ -15,6 +15,14 @@
 <!-- TODO: Buttons Cargar siguiente y anterior -->
 
 <div class="flex justify-between">
-    <button (click)="loadPokemons(-1)" class="mt-2">Anteriores</button>
-    <button (click)="loadPokemons(+1)" class="mt-2">Siguientes</button>
+    <button
+        [disabled]="currentPage() === 1"
+        [routerLink]="['/pokemons/page', currentPage()! - 1]"
+        class="mt-2"
+    >
+        Anteriores
+    </button>
+    <button [routerLink]="['/pokemons/page', currentPage()! + 1]" class="mt-2">
+        Siguientes
+    </button>
 </div>
