--- a/02-pokemon-ssr/src/app/pokemons/components/pokemon-card/pokemon-card.component.html
+++ b/02-pokemon-ssr/src/app/pokemons/components/pokemon-card/pokemon-card.component.html
@@ -1,7 +1,8 @@
 <div
     class="bg-blue-500/25 animate-fadeIn h-44 rounded-lg shadow-md flex flex-col p-4 items-center justify-center cursor-pointer"
-    [routerLink]="['/pokemons', pokemon().id]"
->
+    [routerLink]="['/pokemon', pokemon().name]"
+    >
+    <!-- [routerLink]="['/pokemons', pokemon().id]" -->
     <img
         [src]="pokemonImage()"
         [alt]="pokemon().name"
